# market2nats

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  PROMPTS_ORACLE.md  README.md  build.rs
.githooks/: commit-msg  pre-commit
.github/workflows/: build.yml  code_coverage.yml  docker.yml  format_check.yml  lint.yml  tests.yml
Docker/: Dockerfile  docker-compose.yml  market2nats.Dockerfile  oracle.Dockerfile
config/: docker-oracle.toml  docker-relay.toml  oracle.toml  relay.all-spot-trades.toml  relay.binance-spot-trades.toml  relay.bitfinex.toml  relay.bitmex.toml  relay.bitstamp.toml  relay.bybit.toml  relay.coinbase.toml  relay.crypto-com.toml  relay.deribit.toml  relay.dydx.toml  relay.gate.toml  relay.hyperliquid.toml  relay.kraken-futures.toml  relay.kraken.toml  relay.okx.toml  relay.toml
crates/market2nats/: Cargo.toml
crates/market2nats-domain/: Cargo.toml
crates/market2nats-domain/src/: enums.rs  events.rs  lib.rs  types.rs
crates/market2nats/proto/: market_data.proto
crates/market2nats/src/: main.rs
crates/market2nats/src/application/: metrics_registry.rs  ports.rs  sequence_tracker.rs  subscription_manager.rs
crates/market2nats/src/config/: mod.rs  model.rs  validation.rs
crates/market2nats/src/domain/: mod.rs  types.rs
crates/market2nats/src/infrastructure/http/: health.rs  mod.rs
crates/market2nats/src/infrastructure/nats/: publisher.rs  setup.rs
crates/market2nats/src/infrastructure/ws/: generic.rs  mod.rs
crates/market2nats/src/serialization/: json.rs  proto.rs
crates/market2nats/tests/: config_loading_test.rs  end_to_end_test.rs  http_health_test.rs  nats_connection_test.rs  nats_publish_test.rs
crates/oracle/: Cargo.toml
crates/oracle/example/: oracle.json
crates/oracle/src/: lib.rs  main.rs
crates/oracle/src/application/: health.rs  metrics.rs  mod.rs  oracle_service.rs  ports.rs
crates/oracle/src/config/: builder.rs  mod.rs  model.rs  validation.rs
crates/oracle/src/domain/: error.rs  filters.rs  mod.rs  pipeline.rs  types.rs
crates/oracle/src/domain/strategies/: median.rs  median_filtered.rs  mod.rs  twap.rs  vwap.rs
crates/oracle/src/infrastructure/: fan_out.rs  mod.rs
crates/oracle/src/infrastructure/nats/: mod.rs  publisher.rs  setup.rs  subscriber.rs
crates/oracle/src/infrastructure/ws/: mod.rs  server.rs
crates/oracle/tests/: config_integration.rs  pipeline_integration.rs  strategy_properties.rs  websocket_integration.rs
docs/: market2nats.md  oracle.md  wire-format.md
src/: lib.rs  main.rs
src/application/: CLAUDE.md  health_monitor.rs  mod.rs  pipeline_stats.rs  stream_router.rs
src/config/: CLAUDE.md  mod.rs  model.rs  validation.rs
src/domain/: CLAUDE.md  enums.rs  error.rs  events.rs
src/infrastructure/: CLAUDE.md  mod.rs
src/infrastructure/http/: mod.rs
src/infrastructure/nats/: mod.rs  publisher.rs  setup.rs
src/infrastructure/ws/: circuit_breaker.rs  generic.rs
src/serialization/: CLAUDE.md  json.rs  mod.rs
tests/: config_loading_test.rs  end_to_end_test.rs  http_health_test.rs  nats_connection_test.rs  nats_publish_test.rs  sequence_tracker_stress_test.rs
tests/helpers/: mod.rs
