[package]
name = "market-data-relay"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "WebSocket market data → NATS JetStream relay"
 
[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
 
# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
 
# NATS
async-nats = "0.38"
 
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
prost = "0.13"
bytes = "1"
 
# Decimal arithmetic
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
 
# Error handling
thiserror = "2"
 
# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 
# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
 
# Concurrent data structures
dashmap = "6"
 
# HTTP server (health + metrics)
axum = "0.8"
 
# Utilities
futures-util = "0.3"
url = "2"
 
[build-dependencies]
prost-build = "0.13"
 
[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1"
 
[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
