[package]
name = "market2nats-domain"
version = "0.171.6"
edition.workspace = true
description = "Shared domain types for market2nats workspace"
license = "MIT"
repository = "https://github.com/joaquinbejar/market2nats"

[dependencies]
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }
