[package]
name = "market2nats"
version = "0.1.0"
edition.workspace = true
description = "WebSocket market data → NATS JetStream relay"
license = "MIT"
repository = "https://github.com/joaquinbejar/market2nats"
homepage = "https://github.com/joaquinbejar/market2nats"
readme = "../../README.md"
keywords = ["market-data", "nats", "websocket", "crypto", "trading"]
categories = ["finance", "network-programming"]

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
dashmap = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
rust_decimal_macros = { workspace = true }
reqwest = { workspace = true }
portpicker = { workspace = true }
tempfile = { workspace = true }
