[package]
name = "oracle"
version = "0.1.0"
edition.workspace = true
description = "Aggregated oracle price computation from multi-venue trade data"
license = "MIT"
repository = "https://github.com/joaquinbejar/market2nats"

[features]
config = ["dep:toml"]

[dependencies]
market2nats-domain = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }
async-nats = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tempfile = { workspace = true }
