[package]
name = "oracle"
version = "0.171.2"
edition.workspace = true
description = "Aggregated oracle price computation from multi-venue trade data"
license = "MIT"
repository = "https://github.com/joaquinbejar/market2nats"

[features]
default = ["config"]
config = ["dep:toml"]

[[bin]]
name = "oracle"
path = "src/main.rs"
required-features = ["config"]

[dependencies]
market2nats-domain = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }
async-nats = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
